--- a/src/App.css
+++ b/src/App.css
@@ -39,19 +39,20 @@
 .content:before {
   content: "";
   position: fixed;
-  top: -5%;
-  left: -5%;
+  top: 0%;
+  left: 0%;
   right: 0;
   bottom: 0;
   z-index: -1;
 
   display: block;
-  background-image: url("./pic/spacex.jpg");
+  background-image: url("./pic/red.png");
   background-size: cover;
-
+  /**
   -webkit-filter: blur(1px);
   -moz-filter: blur(1px);
   -o-filter: blur(1px);
   -ms-filter: blur(1px);
   filter: blur(1px);
+  **/
 }
