--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   z-index: -1;
 
   display: block;
-  background-image: url("./pic/red.png");
+  background-image: url("./pic/shou.jpg");
   background-size: cover;
   /**
   -webkit-filter: blur(1px);
