--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .content {
   overflow: auto;
   position: relative;
@@ -48,11 +14,36 @@
   display: block;
   background-image: url("./pic/shou.jpg");
   background-size: cover;
-  /**
-  -webkit-filter: blur(1px);
-  -moz-filter: blur(1px);
-  -o-filter: blur(1px);
-  -ms-filter: blur(1px);
-  filter: blur(1px);
-  **/
+}
+
+.inputFont {
+  border: none;
+  width: 330px;
+  margin: 0;
+  background: none;
+  top: 0;
+  font-size: 90px;
+  font-weight: 500;
+  text-align: center;
+  color: #cea931;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Kanit",
+    sans-serif;
+}
+
+.inputCount {
+  border: none;
+  width: 70px;
+  margin: 0;
+  background: none;
+  top: 0;
+  vertical-align: baseline;
+  font-size: 44px;
+  text-align: center;
+  font-weight: 500;
+  color: #1e1e1e;
+  margin-right: 3.5em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Kanit",
+    sans-serif;
 }
